--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,9 @@
 language: python
 python:
     - "2.7"
-install: "pip install ."
+install: "pip install . && pip install .[test]"
 script: "pytest -s --cov=honeycomb --flake8"
+notifications:
+    email:
+        on_success: change
+        on_failure: change
