set env var for tests

--- a/pytest.ini
+++ b/pytest.ini
@@ -5,3 +5,4 @@ addopts = -s
           --benchmark-save-data
           --benchmark-autosave
           --benchmark-compare
+env = HONEYCOMB_SHARE=123.45.67.89
