fix: reduce multiprocess threads on upload
Was getting lots of SSL connection closed errors.

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -28,6 +28,14 @@
             "module": "honeycomb",
             "justMyCode": false,
             "args": ["Terrain", "--skip-update", "--skip-test"]
+        },
+        {
+            "name": "upload Overlay",
+            "type": "python",
+            "request": "launch",
+            "module": "honeycomb",
+            "justMyCode": false,
+            "args": ["upload", "Overlay"]
         }
     ]
 }
