feat: add global exception log handler

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,11 +3,15 @@
     "alllayers",
     "arcgiscache",
     "dask",
+    "excepthook",
     "EXTENTSFGDB",
     "gethostbyname",
     "globbing",
     "iglob",
+    "levelname",
+    "mininterval",
     "NAIP",
+    "ncols",
     "propy",
     "pygsheets",
     "pytz",
