--- a/.coveragerc
+++ b/.coveragerc
@@ -1,11 +1,9 @@
+[run]
+omit =
+    # files to omit from coverage. should be sample files etc
+    # */connection_sample.py
+
 [report]
-skip_covered = True
-show_missing = True
-precision = 2
 exclude_lines =
-  def __repr__
-  continue
-  raise NotImplementedError
-  if __name__ == .__main__.:
-  log
-  print
+    # Don't complain if non-runnable code isn't run:
+    if __name__ == .__main__.
