--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,13 +1,8 @@
-[tool.isort]
-profile = "black"
-[tool.ruff]
-line-length = 120
+[tool.ruff.lint]
 ignore = ["E501"]
-[tool.black]
-line-length = 120
 [tool.pytest.ini_options]
 minversion = "6.0"
 testpaths = [ "tests", "src" ]
 norecursedirs = [".env", "data", "maps", ".github", ".vscode"]
 console_output_style = "count"
-addopts = "--ruff --cov-branch --cov=projectname --cov-report term --cov-report xml:cov.xml --instafail"
+addopts = "--cov-branch --cov=honeycomb --cov-report term --cov-report xml:cov.xml --instafail"
