--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -1,55 +1,52 @@
 {
-    // Use IntelliSense to learn about possible attributes.
-    // Hover to view descriptions of existing attributes.
-    // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
-    "version": "0.2.0",
-    "configurations": [
-        {
-            "name": "upload PerfTest",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "honeycomb",
-            "justMyCode": true,
-            "args": [
-                "upload",
-                "PerfTest"
-            ],
-        },
-        {
-            "name": "build AddressPoints",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "honeycomb",
-            "justMyCode": true,
-            "args": [
-                "AddressPoints",
-                "--missing-only",
-                "--skip-update",
-                "--skip-test"
-            ],
-        },
-        {
-            "name": "Terrain skip upload",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "honeycomb",
-            "justMyCode": false,
-            "args": [
-                "Terrain",
-                "--skip-update",
-                "--skip-test"
-            ]
-        },
-        {
-            "name": "upload AddressPoints",
-            "type": "debugpy",
-            "request": "launch",
-            "module": "honeycomb",
-            "justMyCode": false,
-            "args": [
-                "upload",
-                "AddressPoints"
-            ]
-        }
-    ]
+  // Use IntelliSense to learn about possible attributes.
+  // Hover to view descriptions of existing attributes.
+  // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
+  "version": "0.2.0",
+  "configurations": [
+    {
+      "name": "Python Debugger: Current File",
+      "type": "debugpy",
+      "request": "launch",
+      "program": "${file}",
+      "console": "integratedTerminal"
+    },
+    {
+      "name": "upload PerfTest",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "honeycomb",
+      "justMyCode": true,
+      "args": ["upload", "PerfTest"]
+    },
+    {
+      "name": "build AddressPoints",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "honeycomb",
+      "justMyCode": true,
+      "args": [
+        "AddressPoints",
+        "--missing-only",
+        "--skip-update",
+        "--skip-test"
+      ]
+    },
+    {
+      "name": "Terrain skip upload",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "honeycomb",
+      "justMyCode": false,
+      "args": ["Terrain", "--skip-update", "--skip-test"]
+    },
+    {
+      "name": "upload AddressPoints",
+      "type": "debugpy",
+      "request": "launch",
+      "module": "honeycomb",
+      "justMyCode": false,
+      "args": ["upload", "AddressPoints"]
+    }
+  ]
 }
